objects/CMPL123CME__MedDRA_SMQ_List__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__MedDRA_version__c</fullName>
        <description>MedDRA version to use in conjunction with this SMQ</description>
        <inlineHelpText>MedDRA version to use in conjunction with this SMQ</inlineHelpText>
        <label>MedDRA Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of SMQ List</description>
        <inlineHelpText>Active Status of SMQ List</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_algorithm__c</fullName>
        <description>If the SMQ was developed for use with an algorithm, the Boolean expression of the algorithm is included. “N” if the SMQ does not utilize an algorithm</description>
        <inlineHelpText>If the SMQ was developed for use with an algorithm, the Boolean expression of the algorithm is included. “N” if the SMQ does not utilize an algorithm</inlineHelpText>
        <label>SMQ Algorithm</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_description__c</fullName>
        <description>Description of the SMQ</description>
        <inlineHelpText>Description of the SMQ</inlineHelpText>
        <label>SMQ Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_level__c</fullName>
        <description>Value between 1 and 5 identifying the level of the SMQ within the hierarchy of SMQs; 1 is the most general, 5 is the most narrow</description>
        <inlineHelpText>Value between 1 and 5 identifying the level of the SMQ within the hierarchy of SMQs; 1 is the most general, 5 is the most narrow</inlineHelpText>
        <label>SMQ Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_list_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>SMQ List Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_name__c</fullName>
        <description>Name for the SMQ, each SMQ carries “(SMQ)” at the end of the name</description>
        <inlineHelpText>Name for the SMQ, each SMQ carries “(SMQ)” at the end of the name</inlineHelpText>
        <label>SMQ Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_note__c</fullName>
        <description>Note for users to better understand the scope and development process for the SMQ. The description of the algorithm used is included (if applicable), as well as the definition of categories</description>
        <inlineHelpText>Note for users to better understand the scope and development process for the SMQ. The description of the algorithm used is included (if applicable), as well as the definition of categories</inlineHelpText>
        <label>SMQ Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__smq_source__c</fullName>
        <description>Source for the development of the SMQ (e.g., medical references)</description>
        <inlineHelpText>Source for the development of the SMQ (e.g., medical references)</inlineHelpText>
        <label>SMQ Source</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__status__c</fullName>
        <description>Status of the SMQ. “A” = An active SMQ; “I” = An inactive SMQ</description>
        <inlineHelpText>Status of the SMQ. “A” = An active SMQ; “I” = An inactive SMQ</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A(An active SMQ)</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>I(An inactive SMQ)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MedDRA SMQ List</label>
    <nameField>
        <label>SMQ Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA SMQ List</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__MedDRA_Version_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__MedDRA_version__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__MedDRA_version__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SMQ_Algorithm_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__smq_algorithm__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__smq_algorithm__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SMQ_Code_should_start_with_2</fullName>
        <active>true</active>
        <description>Eight-digit numeric code assigned to the SMQ, which starts with “2”</description>
        <errorConditionFormula>OR(NOT(BEGINS(Name, "2")),
LEN(Name) &gt; 8,
LEN(Name) &lt; 8
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>SMQ code should start with "2" and must be eight digit only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SMQ_Description_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__smq_description__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__smq_description__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SMQ_Level_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(TEXT(CMPL123CME__smq_level__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__smq_level__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Status_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(TEXT(CMPL123CME__status__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__status__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>